enh: Improve local jDeploy usage instructions and add .gitignore entries